# zero2prod-axum

./: .dockerignore  Cargo.toml  Dockerfile  README.md  configuration.yaml
.sqlx/: query-5a11b6672ca52fafe9b7db7e540db86439134dba61cc0c6490154ddb42e76ecc.json
configuration/: base.yaml
scripts/: init_db.sh
src/: configuration.rs  domain.rs  lib.rs  main.rs  startup.rs  telemetry.rs
src/domain/: mod.rs  new_subscriber.rs  subscriber_email.rs  subscriber_name.rs
src/routes/: subscriptions.rs
tests/: health_check.rs
