[package]
name = "zero2prod-axum"
version = "0.1.0"
edition = "2024"

[lib]
path = "src/lib.rs"

[dependencies]
axum = "0.8.7"
chrono = "0.4.42"
claims = "0.8.0"
config = "0.15.19"
fake = "4.4.0"
secrecy = { version = "0.8", features = ["serde"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "macros", "postgres", "uuid", "chrono", "migrate"] }
tokio = { version = "1.48.0", features = ["full"] }
tower = "0.5.2"
tower-http = { version = "0.6.8", features = ["propagate-header", "request-id", "trace"] }
tracing = { version = "0.1.43", features = ["log"] }
tracing-bunyan-formatter = "0.3.10"
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "registry"] }
unicode-segmentation = "1.12.0"
uuid = { version = "1.19.0", features = ["v4"] }
validator = "0.20.0"

[target.aarch64-apple-darwin]
rustflags= ["-C", "link-arg=-fuse-ld=/opt/homebrew/opt/llvm/bin/ld64.lld"]

[dev-dependencies]
reqwest = "0.12.25"
